[package]
name = "block_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.0"
bevy_egui = "0.31.1"
dirs = "5.0.1"
mc_anvil = { version = "0.1.0", path = "../mc_anvil" }
rnbt = { version = "0.1.0", path = "../rnbt" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
