[package]
name = "block_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_egui = "0.31.1"
rnbt = { git = "https://github.com/awegsche/rnbt.git", version = "0.1.0" }
ranvil = { git = "https://github.com/awegsche/ranvil.git", version = "0.1.0" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
